Fix form on mobile
Set max-width, prevents registration form from expanding beyond screen on mobile.

--- a/django/climate_change_api/user_management/static/scss/components/_form.scss
+++ b/django/climate_change_api/user_management/static/scss/components/_form.scss
@@ -141,6 +141,7 @@ input[type=radio] {
 
 .form-registration {
   width: 49rem;
+  max-width: 100%;
   h3 {
     margin-bottom: 3rem;
   }
